# rebar

./: .gitignore  AGENTS.md  Cargo.toml  README.md  pyproject.toml
benchmarks/workloads/: branch_local_backreference_boundary.json  branch_local_backreference_boundary.py  collection_replacement_boundary.json  collection_replacement_boundary.py  compile_matrix.json  compile_matrix.py  compile_smoke.json  compile_smoke.py  conditional_group_exists_boundary.json  conditional_group_exists_boundary.py  conditional_group_exists_empty_else_boundary.json  conditional_group_exists_empty_else_boundary.py  conditional_group_exists_empty_yes_else_boundary.json  conditional_group_exists_empty_yes_else_boundary.py  conditional_group_exists_fully_empty_boundary.json  conditional_group_exists_fully_empty_boundary.py  conditional_group_exists_no_else_boundary.json  conditional_group_exists_no_else_boundary.py  exact_repeat_quantified_group_boundary.json  exact_repeat_quantified_group_boundary.py  grouped_alternation_boundary.json  grouped_alternation_boundary.py  grouped_alternation_callable_replacement_boundary.json  grouped_alternation_callable_replacement_boundary.py  grouped_alternation_replacement_boundary.json  grouped_alternation_replacement_boundary.py  grouped_named_boundary.json  grouped_named_boundary.py  grouped_segment_boundary.json  grouped_segment_boundary.py  literal_alternation_boundary.json  literal_alternation_boundary.py  literal_flag_boundary.json  literal_flag_boundary.py  module_boundary.json  module_boundary.py  nested_group_alternation_boundary.json  nested_group_alternation_boundary.py  nested_group_boundary.json  nested_group_boundary.py  (+22 more)
crates/rebar-core/: Cargo.toml
crates/rebar-cpython/: Cargo.toml
crates/rebar-cpython/src/: lib.rs
docs/benchmarks/: plan.md
docs/spec/: syntax-scope.md  (+1 more)
ops/: README.md
provenance/: 2026-03-13-agent-loop-transcript.txt  2026-03-13-harness-architecture-transcript.txt  2026-03-13-pre-agent-loop-fix-transcript.txt  first_chat.txt
scripts/: loop_forever.sh  rebar_ops.py
tests/: conftest.cover  conftest.py  harness_cli_support.py  harness_cli_test_support.py  report_assertions.py  test_manifest_loader_duplicate_contract.py
tmp/: correctness-match.json  correctness-smoke.json
(+3512 files in other folders)
