[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "rebar"
version = "0.1.0"
description = "Scaffold CPython extension package for the rebar regex compatibility project."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
]

[tool.maturin]
bindings = "pyo3"
manifest-path = "crates/rebar-cpython/Cargo.toml"
module-name = "rebar._rebar"
python-source = "python"
