[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "rebar"
version = "0.1.0"
description = "Scaffold CPython extension package for the rebar regex compatibility project."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
]

[project.optional-dependencies]
test = ["pytest>=8,<9"]

[tool.maturin]
bindings = "pyo3"
manifest-path = "crates/rebar-cpython/Cargo.toml"
module-name = "rebar._rebar"
python-source = "python"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.rebar.smoke]
native_extension_test = "python3 -m unittest tests.python.test_native_extension_smoke"
native_extension_build = "maturin build --manifest-path crates/rebar-cpython/Cargo.toml --interpreter <venv-python> --out <wheel-dir>"
