[package]
name = "rebar-cpython"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false
description = "PyO3 CPython-extension scaffold for the rebar project."

[lib]
name = "rebar_cpython"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.23.5", features = ["abi3-py312", "extension-module"] }
rebar-core = { path = "../rebar-core" }
